--- a/index.html
+++ b/index.html
@@ -5,12 +5,23 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
-		<form action="http://www.google.com/search" method="get">
-			<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/1024px-Google_%22G%22_Logo.svg.png" width="30" />
-			&nbsp;
-			<input type="text" name="q" placeholder="Buscar">
-			&nbsp;
-			<button type="submit">Aceptar</button>
-		</form>
+		<header>
+			Manuel ADri&aacute;n Flores F&eacute;lix<br />
+			00211372<br />
+			11 de Julio de 2016<br /><br />
+			<b>UNID<br />
+			Maestría en Tecnologías de la Información</b>
+		</header>
+		<br />
+		<fieldset>
+			<legend>Google search</legend>
+			<form action="http://www.google.com/search" method="get">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/1024px-Google_%22G%22_Logo.svg.png" width="30" />
+				&nbsp;
+				<input type="text" name="q" placeholder="Buscar">
+				&nbsp;
+				<button type="submit">Aceptar</button>
+			</form>
+		</fieldset>
 	</body>
 </html>
